# cmake_tutorial

./: CMakeLists.txt  LICENSE
01_minimal/: CMakeLists.txt
02_minimal_with_a_lib/: CMakeLists.txt  my_lib.cpp
03_find_libraries_using_pkg_config/: CMakeLists.txt
04_debug_cmake/: CMakeLists.txt
